-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
Qt Creator 3.1.0
-
None
-
b8f6617f2 (master), 71765041b (master)
Text in editor is not aliased, option "antialiasing" works.
But it is aliased on welcome screens (projects, tutorials) - in theese places it's not very important.
And help pages are all aliased : this is particularly annoying.
Thanks you for fixing rapidely this problem.
For Gerrit Dashboard: QTCREATORBUG-12177 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
494634,2 | Support turning antialiasing of fonts off | master | playground/qlitehtml | Status: MERGED | +2 | 0 |
494635,3 | Help: Add option for disabling antialising of fonts | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |