Help: Add option for disabling antialising of fonts

For the backends that we can do it for (litehtml, QTextBrowser).

Fixes: QTCREATORBUG-12177
Change-Id: If64a279f74f878b6797bf43d8129058c6183919b
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Kai Köhne <kai.koehne@qt.io>